tests/NormalTests/paczka1/small_fuzzy/91042501.err
Error in line 5: WgI 22 4,5
Error in line 3: 8uBzYZ8X6Zu S479 30,0
Error in line 4: WgI A22 37,9
Error in line 11: 8uBzYZ8X6Zu A22 98,0
Error in line 8: WgI A335 5,8
